--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./frontend/css/style.css">
 
     <title>Chat | Tempo Real</title>
 </head>
@@ -43,6 +43,6 @@
         
     </section>
 
-    <script src="./js/script.js"></script>
+    <script src="./frontend/js/script.js"></script>
 </body>
 </html>
